--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "echo 'No build step required'"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
