--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "stripe": "^12.0.0",
+    "telnyx": "^2.0.0",
     "twilio": "^4.10.0"
   },
   "devDependencies": {
